@@ -1,3 +1,7 @@
+2018-02-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* index.php: added News - sdcc 3.7.0 RC2
+
 2018-02-01 Philipp Klaus Krause <pkk AT spth.de>
 
 	* index.php: long long is supported everywhere except for pic.
